# storm-card-reader

./: .eslintrc.json  .gitignore  README.md  next.config.js  package-lock.json  package.json  project-proposal.md
.github/workflows/: release.yml  test-build.yml
app/: page.tsx
app/components/: ImportErrorModal.tsx
app/components/settings/: auto-save-toggle.tsx  settings-modal.tsx
app/components/ui/: button.tsx  collapsible-error.tsx  dialog.tsx  scroll-area.tsx
app/lib/excel/: processor.ts  types.ts  use-spreadsheet.ts
app/lib/hooks/: use-is-tauri.ts
app/lib/scanner/: mock-scanner.ts  types.ts
app/lib/storage/: settings-store.ts  storage-manager.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: dialog.toml  fs.toml
src-tauri/src/: main.rs
