[package]
name = "stormcard-reader"
version = "0.1.0"
description = "StormCard Reader Application"
authors = ["Richard Perez Jr."]
edition = "2021"
rust-version = "1.70"

# Add package metadata for Windows
[package.metadata.windows]
FileDescription = "StormCard Reader"
ProductName = "StormCard Reader"
CompanyName = "St. John's University"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
